--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
             .page {
                 text-align: center;
-                min-height: 100%;
+                height: 100%;
                 padding: 30px;
                 background-attachment: fixed;
                 background-position: center;
