--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
    <!-- favicons
 	================================================== -->
-	<link rel="icon" type="image/png" href="favicon.png">
+	<link rel="icon" type="image/icon" href="favicon.ico">
 
 </head>
 
@@ -37,16 +37,35 @@
 	<!-- header 
    ================================================== -->
    <header>   	
+   	<div class="topnav" id="navbar">
+	  <a class="active" href="#intro">HOME</a>
+	  <a href="#about">ABOUT</a>
+	  <!-- <a href="#resume">RESUME</a> -->
+	  <!-- <a href="#portfolio">PORTFOLIO</a> -->
+	  <!-- <a href="#services">NEWS</a> -->
+	  <!-- <a href="#contact">CONTACT</a> -->
+	</div>
+   	<!-- <nav id="main-nav-wrap">
+		<ul>
+			<li class="current"><a href="#intro" title="">Home</a></li>
+			<li><a href="#about" title="">About</a></li>
+			<li><a href="#resume" title="">Resume</a></li>
+			<li><a href="#portfolio" title="">Portfolio</a></li>
+			<li><a href="#services" title="">Services</a></li>					
+			<li><a href="#contact" title="">Contact</a></li>	
+			<li><a href="styles.html" title="">Style Demo</a></li>				
+		</ul>
+	</nav> -->
    	<div class="row">
 
-   		<div class="top-bar">
-   			<a class="menu-toggle" href="#"><span>Menu</span></a>
+   		<!-- <div class="top-bar"> -->
+   			<!-- <a class="menu-toggle" href="#"><span>Menu</span></a>
 
 	   		<div class="logo">
 		         <a href="index.html">KARDS</a>
-		      </div>		      
+		      </div>	 -->	      
 
-		   	<nav id="main-nav-wrap">
+		   	<!-- <nav id="main-nav-wrap">
 					<ul class="main-navigation">
 						<li class="current"><a class="smoothscroll"  href="#intro" title="">Home</a></li>
 						<li><a class="smoothscroll"  href="#about" title="">About</a></li>
@@ -56,8 +75,8 @@
 						<li><a class="smoothscroll"  href="#contact" title="">Contact</a></li>	
 						<li><a href="styles.html" title="">Style Demo</a></li>				
 					</ul>
-				</nav>    		
-   		</div> <!-- /top-bar --> 
+				</nav> -->    		
+   		<!-- </div> /top-bar  -->
    		
    	</div> <!-- /row --> 		
    </header> <!-- /header -->
@@ -73,8 +92,8 @@
 
    			<div class="col-twelve">
 
-	   			<h5>Hello, World.</h5>
-	   			<h1>I'm Juan Dela Cruz.</h1>
+	   			<h5>I am</h5>
+	   			<h1>DANIEL JAMES</h1>
 
 	   			<p class="intro-position">
 	   				<span>Front-end Developer</span>
@@ -198,7 +217,7 @@
 
    <!-- resume Section
    ================================================== -->
-	<section id="resume" class="grey-section">
+	<section id="resume" class="grey-section" style="display: none;">
 
 		<div class="row section-intro">
    		<div class="col-twelve">
@@ -360,7 +379,7 @@
 
 	<!-- Portfolio Section
    ================================================== -->
-	<section id="portfolio">
+	<section id="portfolio" style="display: none;">
 
 		<div class="row section-intro">
    		<div class="col-twelve">
@@ -613,7 +632,7 @@
 
 	<!-- CTA Section
    ================================================== -->
-	<section id="cta" class="grey-section">
+	<section id="cta" class="grey-section" style="display: none;">
 
    	<div class="row cta-content">
 
@@ -640,7 +659,7 @@
 	
 	<!-- services Section
    ================================================== -->
-	<section id="services">
+	<section id="services" style="display: none;">
 
 		<div class="overlay"></div>
 
@@ -758,7 +777,7 @@
 
 	<!-- stats Section
    ================================================== -->
-	<section id="stats" class="count-up">
+	<section id="stats" class="count-up" style="display: none;">
 
 		<div class="row">
 			<div class="col-twelve">
@@ -873,7 +892,7 @@
    ================================================== -->
 	<section id="contact">
 
-		<div class="row section-intro">
+		<!-- <div class="row section-intro">
    		<div class="col-twelve">
 
    			<h5>Contact</h5>
@@ -882,9 +901,9 @@
    			<p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p>
 
    		</div> 
-   	</div> <!-- /section-intro -->
+   	</div> --> <!-- /section-intro -->
 
-   	<div class="row contact-form">
+   	<div class="row contact-form" style="display: none;">
 
    		<div class="col-twelve">
 
