--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
    	<div class="topnav" id="navbar">
 	  <a class="active" href="#intro">HOME</a>
 	  <a href="#about">ABOUT</a>
+	  <a href="#developer">DEVELOPER</a>
+	  <a href="#cuber">CUBER</a>
+	  <a href="#traveller">TRAVELLER</a>
+	  <a href="#gamer">GAMER</a>
 	  <!-- <a href="#resume">RESUME</a> -->
 	  <!-- <a href="#portfolio">PORTFOLIO</a> -->
 	  <!-- <a href="#services">NEWS</a> -->
@@ -96,8 +100,10 @@
 	   			<h1>DANIEL JAMES</h1>
 
 	   			<p class="intro-position">
-	   				<span>Front-end Developer</span>
-	   				<span>UI/UX Designer</span> 
+	   				<span><a href="#developer" style="color: white;">Developer</a></span>
+	   				<span><a href="#cuber" style="color: white;">Cuber</a></span>
+	   				<span><a href="#traveller" style="color: white;">Traveller</a></span>
+	   				<span><a href="#gamer" style="color: white;">Gamer</a></span>
 	   			</p>
 
 	   			<a class="button stroke smoothscroll" href="#about" title="">More About Me</a>
