--- a/index.html
+++ b/index.html
@@ -132,7 +132,13 @@
    		<div class="col-twelve">
 
    			<h5>About</h5>
-   			<!-- <h1>Let me introduce myself.</h1> -->
+   			<h1>Let me introduce myself.</h1>
+   			<div class="intro-info">
+
+   				<img src="images/profile-pic.jpeg" alt="Profile Picture">
+
+   				<p class="lead">I'm Daniel James and friends call me Dany or DJ. I'm currently working as an iOS developer in Zoho Corporation, Chennai. I'm originally from God's own country Kerala, India.</p>
+   			</div> 
 
    			<!-- <div class="intro-info">
 
@@ -148,22 +154,23 @@
 
    		<div class="col-six tab-full">
    			
-   			<div class="intro-info">
-
-   				<img src="images/profile-pic.jpeg" alt="Profile Picture">
-
-   				<p class="lead">I'm an iOS/Full Stack developer from Kerala, India.</p>
-   			</div> 
-   			<br/>
-   			<h3>Education</h3>
+   			<!-- <h3>Profile</h3> -->
    			<ul class="info-list">
    				<li>
-   					<strong>Graduation</strong>
-   					<span>Bachelor of Technology in Computer Science & Engineering, College of Engineering Trivandrum</span>
+   					<strong>Fullname:</strong>
+   					<span>Daniel James</span>
    				</li>
    				<li>
-   					<strong>Schooling</strong>
-   					<span>Kendriya Vidyalaya</span>
+   					<strong>Birth Date:</strong>
+   					<span>January 6</span>
+   				</li>
+   				<li>
+   					<strong>Parents:</strong>
+   					<span>Jameskutty Thomas & Anitha James</span>
+   				</li>
+   				<li>
+   					<strong>Brother:</strong>
+   					<span>Joseph James</span>
    				</li>
 
    			</ul>
@@ -173,16 +180,24 @@
 
    		<div class="col-six tab-full">
 
-   			<h3>Profile</h3>
+   			<!-- <h3>Hobbies</h3> -->
 
    			<ul class="info-list">
    				<li>
-   					<strong>Fullname:</strong>
-   					<span>Daniel James</span>
+   					<strong>Graduation:</strong>
+   					<span>B.Tech. Computer Science (1 arrear left)</span><span>Kerala University</span><span>College of Engineering Trivandrum</span>
    				</li>
    				<li>
-   					<strong>Birth Date:</strong>
-   					<span>January 6</span>
+   					<strong>Schooling:</strong>
+   					<span>Kendriya Vidyalaya</span>
+   				</li>
+   				<li>
+   					<strong>Nationality:</strong>
+   					<span>Indian</span>
+   				</li>
+   				<li>
+   					<strong>Interested sports:</strong>
+   					<span>Chess, Badminton</span>
    				</li>
 
    			</ul>
