--- a/index.html
+++ b/index.html
@@ -168,10 +168,6 @@
    					<strong>Parents:</strong>
    					<span>Jameskutty Thomas & Anitha James</span>
    				</li>
-   				<li>
-   					<strong>Brother:</strong>
-   					<span>Joseph James</span>
-   				</li>
 
    			</ul>
    			 <!-- /info-list -->
@@ -184,12 +180,8 @@
 
    			<ul class="info-list">
    				<li>
-   					<strong>Graduation:</strong>
-   					<span>B.Tech. Computer Science (1 arrear left)</span><span>Kerala University</span><span>College of Engineering Trivandrum</span>
-   				</li>
-   				<li>
-   					<strong>Schooling:</strong>
-   					<span>Kendriya Vidyalaya</span>
+   					<strong>Brother:</strong>
+   					<span>Joseph James</span>
    				</li>
    				<li>
    					<strong>Nationality:</strong>
@@ -234,27 +226,15 @@
 
    	</div>
 
-   	<div class="row button-section">
-   		<div class="col-twelve">
-   			<a href="#contact" title="Contact Me" class="button stroke smoothscroll">Contact Me</a>
-   			<!-- <a href="#" title="Download CV" class="button button-primary">Download CV</a> -->
-   		</div>   		
-   	</div>
 
-   </section> <!-- /process-->    
-
-
-   <!-- resume Section
-   ================================================== -->
-	<section id="resume" class="grey-section" style="display: none;">
 
 		<div class="row section-intro">
    		<div class="col-twelve">
 
-   			<h5>Resume</h5>
-   			<h1>More of my credentials.</h1>
+   			<!-- <h5>Resume</h5>
+   			<h1>More of my credentials.</h1> -->
 
-   			<p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p>
+   			<!-- <p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p> -->
 
    		</div>   		
    	</div> <!-- /section-intro--> 
@@ -274,17 +254,17 @@
    				<div class="timeline-block">
 
 	   				<div class="timeline-ico">
-	   					<i class="fa fa-graduation-cap"></i>
+	   					<i class="fa fa-briefcase"></i>
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>UI Designer</h3>
-	   					<p>July 2015 - Present</p>
+	   					<h3>iOS Developer</h3>
+	   					<p>Jun 2017 - Present</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>Awesome Studio</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
+	   					<h4>Zoho Corporation</h4>
+	   					<p>I worked for the iOS app of Zoho Sheet. Initially the app was written in Objective-C and later it was migrated to Swift 3, then Swift 5.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -292,22 +272,22 @@
 	   			<div class="timeline-block">
 
 	   				<div class="timeline-ico">
-	   					<i class="fa fa-graduation-cap"></i>
+	   					<i class="fa fa-briefcase"></i>
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Front-end Developer</h3>
-	   					<p>July 2014 - June 2015</p>
+	   					<h3>Full-stack Developer</h3>
+	   					<p>Jan 2017 - Mar 2017</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>Super Cool Agency</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
+	   					<h4>Zoho Corporation</h4>
+	   					<p>I was intern for Zoho Sheet. During the intern period, I worked mainly in JSP for front-end and Java for back-end.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
 
-	   			<div class="timeline-block">
+	   			<!-- <div class="timeline-block">
 
 	   				<div class="timeline-ico">
 	   					<i class="fa fa-graduation-cap"></i>
@@ -323,7 +303,7 @@
 	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
 	   				</div>
 
-	   			</div> <!-- /timeline-block -->
+	   			</div>  --><!-- /timeline-block -->
 
    			</div> <!-- /timeline-wrap -->   			
 
@@ -346,17 +326,17 @@
    				<div class="timeline-block">
 
 	   				<div class="timeline-ico">
-	   					<i class="fa fa-briefcase"></i>
+	   					<i class="fa fa-graduation-cap"></i>
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Master Degree</h3>
-	   					<p>July 2015 - Present</p>
+	   					<h3>Bachelor Degree</h3>
+	   					<p>Computer Science<br/>Kerala University</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>University of Life</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
+	   					<h4>College of Engineering Trivandrum</h4>
+	   					<p align="justify">The College of Engineering, Trivandrum, commonly known as CET, is the first engineering college in Kerala, situated in Thiruvananthapuram, the capital city of Kerala. It was founded in 1939 during the reign of the Travancore King, Chithira Thirunal Balarama Varma. CET is the best engineering college in Kerala after NIT Calicut.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -364,22 +344,22 @@
 	   			<div class="timeline-block">
 
 	   				<div class="timeline-ico">
-	   					<i class="fa fa-briefcase"></i>
+	   					<i class="fa fa-graduation-cap"></i>
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Bachelor Degree</h3>
-	   					<p>July 2014 - June 2015</p>
+	   					<h3>Schooling</h3>
+	   					<p>Central Board of Secondary Education (CBSE)</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>State Design University</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
+	   					<h4>Kendriya Vidyalaya (Ernakulam/Pattom)</h4>
+	   					<p align="justify">The Kendriya Vidyalaya Sangathan (lit. "central schools") is a system of central government schools in India that are instituted under the aegis of the Ministry of Human Resource Development (MHRD). It has a total of 1209 schools in India.(as of July 2019) and three abroad. It is one of world's largest chains of schools.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
 
-	   			<div class="timeline-block">
+	   			<!-- <div class="timeline-block">
 
 	   				<div class="timeline-ico">
 	   					<i class="fa fa-briefcase"></i>
@@ -395,15 +375,22 @@
 	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
 	   				</div>
 
-	   			</div> <!-- /timeline-block -->
+	   			</div> --> <!-- /timeline-block -->
 
    			</div> <!-- /timeline-wrap -->   			
 
    		</div> <!-- /col-twelve -->
    		
    	</div> <!-- /resume-timeline -->
-		
-	</section> <!-- /features -->
+
+   	<div class="row button-section">
+   		<div class="col-twelve">
+   			<a href="#contact" title="Contact Me" class="button stroke smoothscroll">Contact Me</a>
+   			<!-- <a href="#" title="Download CV" class="button button-primary">Download CV</a> -->
+   		</div>   		
+   	</div>
+
+   	</section> <!-- /process-->    
 
 
 	<!-- Portfolio Section
