medium post modified

--- a/html/developer.html
+++ b/html/developer.html
@@ -58,13 +58,18 @@
 	</div>
 	<div class="col-twelve">
 		<h3 style="color: #4169E1; text-align: center;">Blogs (more coming soon...)</h3>
-		<div class="col-six">
-			<div class="card  card--z-3" style="width: 100%; padding: 10px;">
-				<i class="fab fa-medium"></i>
-				<h2>Git anonymize user name and user email in the commits log</h2>
-				<p>In git version control, you can set the user name and user email that should be displayed....</p>
-				<a href="https://medium.com/@daniel_james/git-anonymize-user-name-and-user-email-in-the-commits-log-a6a21a9d4c09" target="_blank" class="button stroke">Read More...</a>
-			</div>
+		<div class="col-four tab-full"><a href="https://medium.com/@daniel_james/git-anonymize-user-name-and-user-email-in-the-commits-log-a6a21a9d4c09" target="_blank" style="color: inherit;">
+			<div class="blogpost" style="text-align: center;">
+				<div class="row" style="margin: 10px;">
+					<i class="fab fa-medium" style="width: 100%; max-width: 100px; height: 100%;"></i>
+				</div>
+				<div class="row" style="margin: 10px;">
+					<h2>Git anonymize user name and user email in the commits log</h2>
+				</div>
+				<div class="row" style="margin: 10px;">
+					<p>In git version control, you can set the user name and user email that should be displayed....</p>
+				</div>
+			</div></a>
 		</div>
 	</div>
 </div>
