--- a/html/developer.html
+++ b/html/developer.html
@@ -10,50 +10,84 @@
 <div class="row">
 	<div class="col-twelve">
 		<h2 style="color: #4169E1; text-align: center;">Skillset</h2>
-		<div class="col-twelve" style="margin-left: 0;">
+		<div class="col-six" style="margin-left: 0;">
 			<h4 style="color: #000000; text-align: left;">Programming Languages - Compiled Languages</h4>
-			<ul class="language">
+			<ul class="skill-bars">
+				<li><div class="progress percent90"></div><strong>C</strong></li>
+				<li><div class="progress percent90"></div><strong>C++</strong></li>
+				<li><div class="progress percent90"></div><strong>JAVA</strong></li>
+				<li><div class="progress percent90"></div><strong>OBJECTIVE-C</strong></li>
+				<li><div class="progress percent90"></div><strong>SWIFT</strong></li>
+			</ul>
+			<!-- <ul class="language">
 				<li class="button stroke smoothscroll disabled">C</li>
 				<li class="button stroke smoothscroll disabled">C++</li>
 				<li class="button stroke smoothscroll disabled">JAVA</li>
 				<li class="button stroke smoothscroll disabled">OBJECTIVE C</li>
 				<li class="button stroke smoothscroll disabled">SWIFT</li>
-			</ul>
+			</ul> -->
 			<h4 style="color: #000000; text-align: left;">Programming Languages - Scripting Languages</h4>
-			<ul class="language">
+			<ul class="skill-bars">
+				<li><div class="progress percent90"></div><strong>PYTHON</strong></li>
+				<li><div class="progress percent90"></div><strong>JAVASCRIPT</strong></li>
+				<li><div class="progress percent90"></div><strong>BASH</strong></li>
+				<li><div class="progress percent90"></div><strong>RUBY-C</strong></li>
+			</ul>
+			<!-- <ul class="language">
 				<li class="button stroke smoothscroll disabled">PYTHON</li>
 				<li class="button stroke smoothscroll disabled">JAVASCRIPT</li>
 				<li class="button stroke smoothscroll disabled">BASH</li>
 				<li class="button stroke smoothscroll disabled">RUBY</li>
-			</ul>
+			</ul> -->
 			<h4 style="color: #000000; text-align: left;">Markup Languages</h4>
-			<ul class="language">
+			<ul class="skill-bars">
+				<li><div class="progress percent90"></div><strong>HTML 5</strong></li>
+				<li><div class="progress percent90"></div><strong>CSS 3</strong></li>
+				<li><div class="progress percent90"></div><strong>XML</strong></li>
+			</ul>
+			<!-- <ul class="language">
 				<li class="button stroke smoothscroll disabled">HTML 5</li>
 				<li class="button stroke smoothscroll disabled">CSS 3</li>
 				<li class="button stroke smoothscroll disabled">XML</li>
-			</ul>
+			</ul> -->
 		</div>
-		<div class="col-twelve" style="margin-left: 0;">
+		<div class="col-six" style="margin-left: 0;">
 			<h4 style="color: #000000; text-align: left;">Database Languages</h4>
-			<ul class="language">
-				<li class="button stroke smoothscroll disabled">MYSQL</li>
+			<ul class="skill-bars">
+				<li><div class="progress percent90"></div><strong>MYSQL</strong></li>
 			</ul>
+			<!-- <ul class="language">
+				<li class="button stroke smoothscroll disabled">MYSQL</li>
+			</ul> -->
 			<h4 style="color: #000000; text-align: left;">Mobile Development</h4>
-			<ul class="language">
+			<ul class="skill-bars">
+				<li><div class="progress percent90"></div><strong>Android Studio (Android)</strong></li>
+				<li><div class="progress percent90"></div><strong>XCode (iOS)</strong></li>
+			</ul>
+			<!-- <ul class="language">
 				<li class="button stroke smoothscroll disabled">Android Studio (Android)</li>
 				<li class="button stroke smoothscroll disabled">XCode (iOS)</li>
-			</ul>
+			</ul> -->
 			<h4 style="color: #000000; text-align: left;">Front-end Development</h4>
-			<ul class="language">
+			<ul class="skill-bars">
+				<li><div class="progress percent90"></div><strong>ANGULAR JS</strong></li>
+				<li><div class="progress percent90"></div><strong>BOOTSTRAP</strong></li>
+			</ul>
+			<!-- <ul class="language">
 				<li class="button stroke smoothscroll disabled">ANGULAR JS</li>
 				<li class="button stroke smoothscroll disabled">BOOTSTRAP</li>
-			</ul>
+			</ul> -->
 			<h4 style="color: #000000; text-align: left;">Server Side Development</h4>
-			<ul class="language">
+			<ul class="skill-bars">
+				<li><div class="progress percent90"></div><strong>Spring</strong></li>
+				<li><div class="progress percent90"></div><strong>NodeJS</strong></li>
+				<li><div class="progress percent90"></div><strong>Ruby on Rails</strong></li>
+			</ul>
+			<!-- <ul class="language">
 				<li class="button stroke smoothscroll disabled">Spring</li>
 				<li class="button stroke smoothscroll disabled">NodeJS</li>
 				<li class="button stroke smoothscroll disabled">Ruby on Rails</li>
-			</ul>
+			</ul> -->
 		</div> 
 	</div>
 	<div class="col-twelve">
