--- a/html/developer.html
+++ b/html/developer.html
@@ -10,84 +10,105 @@
 <div class="row">
 	<div class="col-twelve">
 		<h2 style="color: #4169E1; text-align: center;">Skillset</h2>
-		<div class="col-six" style="margin-left: 0;">
-			<h4 style="color: #000000; text-align: left;">Programming Languages - Compiled Languages</h4>
-			<ul class="skill-bars">
+		<!-- <div class="row">
+			<div class="col-1"><div class="col-1-content">C</div></div>
+			<div class="col-1"><div class="col-1-content">C++</div></div>
+			<div class="col-1"><div class="col-1-content">Java</div></div>
+			<div class="col-1"><div class="col-1-content">Obj-C</div></div>
+			<div class="col-1"><div class="col-1-content">Swift</div></div>
+			<div class="col-1"><div class="col-1-content">Python</div></div>
+			<div class="col-1"><div class="col-1-content">JavaScript</div></div>
+			<div class="col-1"><div class="col-1-content">Bash</div></div>
+			<div class="col-1"><div class="col-1-content">HTML 5</div></div>
+			<div class="col-1"><div class="col-1-content">CSS 3</div></div>
+			<div class="col-1"><div class="col-1-content">XML</div></div>
+			<div class="col-1"><div class="col-1-content">AngularJS</div></div>
+			<div class="col-1"><div class="col-1-content">Bootstrap</div></div>
+			<div class="col-1"><div class="col-1-content">MySQL</div></div>
+			<div class="col-1"><div class="col-1-content">Android Studio</div></div>
+			<div class="col-1"><div class="col-1-content">Xcode</div></div>
+			<div class="col-1"><div class="col-1-content">Spring Boot</div></div>
+			<div class="col-1"><div class="col-1-content">NodeJS</div></div>
+			<div class="col-1"><div class="col-1-content">Ruby on Rails</div></div>
+		</div> -->
+		<div class="col-six tab-full" style="margin-left: 0;">
+			<h4 style="color: #000000; text-align: left;">Programming Languages (Compiled)</h4>
+			<!-- <ul class="skill-bars">
 				<li><div class="progress percent90"></div><strong>C</strong></li>
 				<li><div class="progress percent90"></div><strong>C++</strong></li>
 				<li><div class="progress percent90"></div><strong>JAVA</strong></li>
 				<li><div class="progress percent90"></div><strong>OBJECTIVE-C</strong></li>
 				<li><div class="progress percent90"></div><strong>SWIFT</strong></li>
-			</ul>
-			<!-- <ul class="language">
+			</ul> -->
+			<ul class="language">
 				<li class="button stroke smoothscroll disabled">C</li>
 				<li class="button stroke smoothscroll disabled">C++</li>
 				<li class="button stroke smoothscroll disabled">JAVA</li>
 				<li class="button stroke smoothscroll disabled">OBJECTIVE C</li>
 				<li class="button stroke smoothscroll disabled">SWIFT</li>
+			</ul>
+			<h4 style="color: #000000; text-align: left;">Markup Languages</h4>
+			<!-- <ul class="skill-bars">
+				<li><div class="progress percent90"></div><strong>HTML 5</strong></li>
+				<li><div class="progress percent90"></div><strong>CSS 3</strong></li>
+				<li><div class="progress percent90"></div><strong>XML</strong></li>
 			</ul> -->
-			<h4 style="color: #000000; text-align: left;">Programming Languages - Scripting Languages</h4>
-			<ul class="skill-bars">
+			<ul class="language">
+				<li class="button stroke smoothscroll disabled">HTML 5</li>
+				<li class="button stroke smoothscroll disabled">CSS 3</li>
+				<li class="button stroke smoothscroll disabled">XML</li>
+			</ul>
+			<h4 style="color: #000000; text-align: left;">Front-end Development</h4>
+			<!-- <ul class="skill-bars">
+				<li><div class="progress percent90"></div><strong>ANGULAR JS</strong></li>
+				<li><div class="progress percent90"></div><strong>BOOTSTRAP</strong></li>
+			</ul> -->
+			<ul class="language">
+				<li class="button stroke smoothscroll disabled">ANGULAR JS</li>
+				<li class="button stroke smoothscroll disabled">BOOTSTRAP</li>
+			</ul>
+			<h4 style="color: #000000; text-align: left;">Database Languages</h4>
+			<!-- <ul class="skill-bars">
+				<li><div class="progress percent90"></div><strong>MYSQL</strong></li>
+			</ul> -->
+			<ul class="language">
+				<li class="button stroke smoothscroll disabled">MYSQL</li>
+			</ul>
+		</div>
+		<div class="col-six tab-full" style="margin-left: 0;">
+			<h4 style="color: #000000; text-align: left;">Programming Languages (Scripting)</h4>
+			<!-- <ul class="skill-bars">
 				<li><div class="progress percent90"></div><strong>PYTHON</strong></li>
 				<li><div class="progress percent90"></div><strong>JAVASCRIPT</strong></li>
 				<li><div class="progress percent90"></div><strong>BASH</strong></li>
 				<li><div class="progress percent90"></div><strong>RUBY-C</strong></li>
-			</ul>
-			<!-- <ul class="language">
+			</ul> -->
+			<ul class="language">
 				<li class="button stroke smoothscroll disabled">PYTHON</li>
 				<li class="button stroke smoothscroll disabled">JAVASCRIPT</li>
 				<li class="button stroke smoothscroll disabled">BASH</li>
 				<li class="button stroke smoothscroll disabled">RUBY</li>
-			</ul> -->
-			<h4 style="color: #000000; text-align: left;">Markup Languages</h4>
-			<ul class="skill-bars">
-				<li><div class="progress percent90"></div><strong>HTML 5</strong></li>
-				<li><div class="progress percent90"></div><strong>CSS 3</strong></li>
-				<li><div class="progress percent90"></div><strong>XML</strong></li>
 			</ul>
-			<!-- <ul class="language">
-				<li class="button stroke smoothscroll disabled">HTML 5</li>
-				<li class="button stroke smoothscroll disabled">CSS 3</li>
-				<li class="button stroke smoothscroll disabled">XML</li>
-			</ul> -->
-		</div>
-		<div class="col-six" style="margin-left: 0;">
-			<h4 style="color: #000000; text-align: left;">Database Languages</h4>
-			<ul class="skill-bars">
-				<li><div class="progress percent90"></div><strong>MYSQL</strong></li>
-			</ul>
-			<!-- <ul class="language">
-				<li class="button stroke smoothscroll disabled">MYSQL</li>
-			</ul> -->
 			<h4 style="color: #000000; text-align: left;">Mobile Development</h4>
-			<ul class="skill-bars">
+			<!-- <ul class="skill-bars">
 				<li><div class="progress percent90"></div><strong>Android Studio (Android)</strong></li>
 				<li><div class="progress percent90"></div><strong>XCode (iOS)</strong></li>
-			</ul>
-			<!-- <ul class="language">
+			</ul> -->
+			<ul class="language">
 				<li class="button stroke smoothscroll disabled">Android Studio (Android)</li>
 				<li class="button stroke smoothscroll disabled">XCode (iOS)</li>
-			</ul> -->
-			<h4 style="color: #000000; text-align: left;">Front-end Development</h4>
-			<ul class="skill-bars">
-				<li><div class="progress percent90"></div><strong>ANGULAR JS</strong></li>
-				<li><div class="progress percent90"></div><strong>BOOTSTRAP</strong></li>
 			</ul>
-			<!-- <ul class="language">
-				<li class="button stroke smoothscroll disabled">ANGULAR JS</li>
-				<li class="button stroke smoothscroll disabled">BOOTSTRAP</li>
-			</ul> -->
 			<h4 style="color: #000000; text-align: left;">Server Side Development</h4>
-			<ul class="skill-bars">
+			<!-- <ul class="skill-bars">
 				<li><div class="progress percent90"></div><strong>Spring</strong></li>
 				<li><div class="progress percent90"></div><strong>NodeJS</strong></li>
 				<li><div class="progress percent90"></div><strong>Ruby on Rails</strong></li>
-			</ul>
-			<!-- <ul class="language">
+			</ul> -->
+			<ul class="language">
 				<li class="button stroke smoothscroll disabled">Spring</li>
 				<li class="button stroke smoothscroll disabled">NodeJS</li>
 				<li class="button stroke smoothscroll disabled">Ruby on Rails</li>
-			</ul> -->
+			</ul>
 		</div> 
 	</div>
 	<div class="col-twelve">
