--- a/index.html
+++ b/index.html
@@ -761,6 +761,7 @@
 
 
 	<section id="developer"></section>
+	<section id="cuber"></section>
 
    <!-- footer
    ================================================== -->
