cubing page added

--- a/html/cuber.html
+++ b/html/cuber.html
@@ -4,6 +4,136 @@
 		<h1>It's my world of puzzles.</h1>
 		<div class="intro-info">
 			<p class="lead">I started cubing in 2012 and do various puzzles that are recognized by World Cube Association - a non-profit organization.</p>
+			<a class="button stroke smoothscroll" href="https://www.worldcubeassociation.org/persons/2012JAME04" target="_blank" title="">Visit my WCA Profile</a>
 		</div> 
+	</div>
+</div>
+<h2 style="color: #4169E1; text-align: center;">Statistics</h2>
+<div class="row">
+	<div class="col-twelve" style="background-color: #708090; padding-top: 20px;">
+
+		<div class="block-1-6 block-s-1-3 block-tab-1-2 block-mob-full stats-list">
+
+			<div class="bgrid stat">
+
+				<div class="icon-part">
+					<i class="fas fa-trophy" style="color: white; width: 50px; height: 50px;"></i>
+				</div>
+
+				<h3 class="stat-count">
+					6
+				</h3>
+
+				<h5 class="stat-title">
+					National Records
+				</h5>
+
+			</div> <!-- /stat -->					
+
+			<div class="bgrid stat">
+
+				<div class="icon-part">
+					<i class="fas fa-medal" style="color: white; width: 50px; height: 50px;"></i>
+				</div>
+
+				<h3 class="stat-count">
+					91
+				</h3>
+
+				<h5 class="stat-title">
+					Medals
+				</h5>
+
+			</div> <!-- /stat -->
+
+			<div class="bgrid stat">
+
+				<div class="icon-part">
+					<i class="cubing-icon event-333" style="color: white; width: 50px; height: 50px;"></i>
+				</div>
+
+				<h3 class="stat-count">
+					11.97s
+				</h3>
+
+				<h5 class="stat-title">
+					Fastest Time to solve 3x3x3 Cube
+				</h5>
+
+			</div> <!-- /stat -->									
+
+			<div class="bgrid stat">
+
+				<div class="icon-part">
+					<i class="cubing-icon event-222" style="color: white; width: 50px; height: 50px;"></i>
+				</div>
+
+				<h3 class="stat-count">
+					2.17s
+				</h3>
+
+				<h5 class="stat-title">
+					Fastest Time to solve 2x2x2 Cube
+				</h5>
+
+			</div> <!-- /stat -->
+
+			<div class="bgrid stat">
+
+				<div class="icon-part">
+					<i class="cubing-icon event-333bf" style="color: white; width: 50px; height: 50px;"></i>
+				</div>
+
+				<h3 class="stat-count">
+					64.90s
+				</h3>
+
+				<h5 class="stat-title">
+					Fastest Time to solve 3x3x3 Cube Blindfolded
+				</h5>
+
+			</div> <!-- /stat -->
+
+			<div class="bgrid stat">
+
+				<div class="icon-part">
+					<i class="cubing-icon event-333mbf" style="color: white; width: 50px; height: 50px;"></i>
+				</div>
+
+				<h3 class="stat-count">
+					12/13
+				</h3>
+
+				<h5 class="stat-title">
+					Most number of Cubes solved Multi-blindfolded
+				</h5>
+
+			</div> <!-- /stat -->
+
+		</div> <!-- /stats-list -->
+
+	</div> <!-- /twelve -->
+</div> <!-- /row -->
+<br/>
+<h2 style="color: #4169E1; text-align: center;">Videos</h2>
+<div class="row">
+	<div class="col-six">
+		<div class="video-container"><iframe class="cubing-videos" width="560" height="315" src="https://www.youtube.com/embed/uJEh5aaF5os" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+	</div>
+	<div class="col-six">
+		<div class="video-container"><iframe class="cubing-videos" width="560" height="315" src="https://www.youtube.com/embed/_r9DJAqZ6_E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+	</div>
+</div>
+<div class="row">
+	<div class="col-six">
+		<div class="video-container"><iframe class="cubing-videos" width="560" height="315" src="https://www.youtube.com/embed/a6jB6QsmQuc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+	</div>
+	<div class="col-six">
+		<div class="video-container"><iframe class="cubing-videos" width="560" height="315" src="https://www.youtube.com/embed/paxDZpcpC1E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+	</div>
+</div>
+<div class="row">
+	<div class="col-six">
+		<div class="video-container"><iframe class="cubing-videos" width="560" height="315" src="https://www.youtube.com/embed/2EAFQCITXcM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 	</div>
 </div>
