some more changes

--- a/html/cuber.html
+++ b/html/cuber.html
@@ -3,7 +3,7 @@
 		<h5>Cuber</h5>
 		<h1>It's my world of puzzles.</h1>
 		<div class="intro-info">
-			<p class="lead">I started cubing in 2012 and do various puzzles that are recognized by World Cube Association - a non-profit organization.</p>
+			<p class="lead">I started my cubing venture by solving a simple 3x3 puzzle in 2012. Later I was introduced to various other twisty puzzles and methodologies through World Cube Association.</p>
 			<a class="button stroke smoothscroll" href="https://www.worldcubeassociation.org/persons/2012JAME04" target="_blank" title="">Visit my WCA Profile</a>
 		</div> 
 	</div>
