--- a/html/developer.html
+++ b/html/developer.html
@@ -95,7 +95,7 @@
 				<li><div class="progress percent90"></div><strong>XCode (iOS)</strong></li>
 			</ul> -->
 			<ul class="language">
-				<li class="button stroke smoothscroll disabled">Android Studio (Android)</li>
+				<li class="button stroke smoothscroll disabled">Android Studio</li>
 				<li class="button stroke smoothscroll disabled">XCode (iOS)</li>
 			</ul>
 			<h4 style="color: #000000; text-align: left;">Server Side Development</h4>
