--- a/html/cuber.html
+++ b/html/cuber.html
@@ -117,23 +117,23 @@
 <br/>
 <h2 style="color: #4169E1; text-align: center;">Videos</h2>
 <div class="row">
-	<div class="col-six">
+	<div class="col-four">
 		<div class="video-container"><iframe class="cubing-videos" width="560" height="315" src="https://www.youtube.com/embed/uJEh5aaF5os" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 	</div>
-	<div class="col-six">
+	<div class="col-four">
 		<div class="video-container"><iframe class="cubing-videos" width="560" height="315" src="https://www.youtube.com/embed/_r9DJAqZ6_E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 	</div>
-</div>
-<div class="row">
-	<div class="col-six">
+	<div class="col-four">
 		<div class="video-container"><iframe class="cubing-videos" width="560" height="315" src="https://www.youtube.com/embed/a6jB6QsmQuc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 	</div>
-	<div class="col-six">
-		<div class="video-container"><iframe class="cubing-videos" width="560" height="315" src="https://www.youtube.com/embed/paxDZpcpC1E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-	</div>
 </div>
 <div class="row">
-	<div class="col-six">
+	<div class="col-four">
+		<div class="video-container"><iframe class="cubing-videos" width="560" height="315" src="https://www.youtube.com/embed/paxDZpcpC1E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+	</div>
+	<div class="col-four">
 		<div class="video-container"><iframe class="cubing-videos" width="560" height="315" src="https://www.youtube.com/embed/2EAFQCITXcM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 	</div>
 </div>
+<!-- <div class="row">
+</div> -->
