--- a/html/about.html
+++ b/html/about.html
@@ -88,7 +88,7 @@
 
 <div class="row resume-timeline">
 
-	<div class="col-twelve resume-header">
+	<div class="col-twelve sub-header">
 
 		<h2>Work Experience</h2>
 
@@ -160,7 +160,7 @@
 
 <div class="row resume-timeline">
 
-	<div class="col-twelve resume-header">
+	<div class="col-twelve sub-header">
 
 		<h2>Education</h2>
 
