--- a/html/cuber.html
+++ b/html/cuber.html
@@ -8,7 +8,7 @@
 		</div> 
 	</div>
 </div>
-<h2 style="color: #4169E1; text-align: center;">Statistics</h2>
+<h2 class="sub-header">Statistics</h2>
 <div class="row">
 	<div class="col-twelve" style="background-color: #708090; padding-top: 20px;">
 
@@ -115,7 +115,7 @@
 	</div> <!-- /twelve -->
 </div> <!-- /row -->
 <br/>
-<h2 style="color: #4169E1; text-align: center;">Videos</h2>
+<h2 class="sub-header">Videos</h2>
 <div class="row">
 	<div class="col-four">
 		<div class="video-container"><iframe class="cubing-videos" width="560" height="315" src="https://www.youtube.com/embed/uJEh5aaF5os" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
