--- a/html/developer.html
+++ b/html/developer.html
@@ -9,7 +9,7 @@
    		</div></div>
 <div class="row">
 	<div class="col-twelve">
-		<h2 class="sub-header">Skillset</h2>
+		<div class="col-twelve sub-header"><h2>Skillset</h2></div>
 		<!-- <div class="row">
 			<div class="col-1"><div class="col-1-content">C</div></div>
 			<div class="col-1"><div class="col-1-content">C++</div></div>
@@ -112,7 +112,7 @@
 		</div> 
 	</div>
 	<div class="col-twelve">
-		<h3 class="sub-header">Blogs (more coming soon...)</h3>
+		<div class="col-twelve sub-header"><h2>Blogs (more coming soon...)</h2></div>
 		<div class="col-four tab-full"><a href="https://medium.com/@daniel_james/git-anonymize-user-name-and-user-email-in-the-commits-log-a6a21a9d4c09" target="_blank" style="color: inherit;">
 			<div class="blogpost" style="text-align: center;">
 				<div class="row" style="margin: 10px;">
