--- a/html/about.html
+++ b/html/about.html
@@ -160,11 +160,7 @@
 
 <div class="row resume-timeline">
 
-	<div class="col-twelve sub-header">
-
-		<h2>Education</h2>
-
-	</div> <!-- /resume-header -->
+	<div class="col-twelve sub-header"><h2>Education</h2></div>
 
 	<div class="col-twelve">
 
