--- a/index.html
+++ b/index.html
@@ -762,6 +762,7 @@
 
 	<section id="developer"></section>
 	<section id="cuber"></section>
+	<section id="traveller"></section>
 
    <!-- footer
    ================================================== -->
