--- a/index.html
+++ b/index.html
@@ -763,6 +763,7 @@
 	<section id="developer"></section>
 	<section id="cuber"></section>
 	<section id="traveller"></section>
+	<section id="gamer"></section>
 
    <!-- footer
    ================================================== -->
