--- a/html/about.html
+++ b/html/about.html
@@ -4,7 +4,7 @@
 		<h1>Let me introduce myself.</h1>
 		<div class="intro-info">
 			<img src="images/profile-pic.jpeg" alt="Profile Picture">
-			<p class="lead">I'm Daniel James and friends call me Dany or DJ. I'm currently working as an iOS developer in Zoho Corporation, Chennai. I'm originally from God's own country Kerala, India.</p>
+			<p class="lead" style="text-align: justify;">I'm Daniel James and friends call me Dany or DJ. I'm currently working as an iOS developer in Zoho Corporation, Chennai. I'm interested in developing web apps & mobile apps. I'm a Math nerd and have a strong grit in solving computational problems. Machine learning is one of the domain that I'm very inquisitive about. I'm an avid speedcuber and a fun loving guy.</p>
 		</div> 
 	</div>
 </div>
@@ -15,17 +15,21 @@
 		
 		<!-- <h3>Profile</h3> -->
 		<ul class="info-list">
-			<li>
+			<!-- <li>
 				<strong>Fullname:</strong>
 				<span>Daniel James</span>
 			</li>
 			<li>
 				<strong>Birth Date:</strong>
 				<span>January 6</span>
-			</li>
+			</li> -->
 			<li>
 				<strong>Languages known:</strong>
-				<span>English, Malayalam</span>
+				<span>English, Malayalam, Hindi, Sanksrit, Tamil</span>
+			</li>
+			<li>
+				<strong>Nationality:</strong>
+				<span>Indian</span>
 			</li>
 
 		</ul>
@@ -39,10 +43,6 @@
 
 		<ul class="info-list">
 			
-			<li>
-				<strong>Nationality:</strong>
-				<span>Indian</span>
-			</li>
 			<li>
 				<strong>Hobbies:</strong>
 				<span>Sports, Travelling, Swimming, Reading</span>
@@ -111,7 +111,7 @@
 
 				<div class="timeline-content">
 					<h4>Zoho Corporation</h4>
-					<p>I worked for the iOS app of Zoho Sheet. Initially the app was written in Objective-C and later it was migrated to Swift 3, then Swift 5.</p>
+					<p style="text-align: justify;">I'm currently working for the iOS app of Zoho Sheet. Zoho Sheet is an online SaaS-based spreadsheet application. I've worked in migration of the app from Objective-C to Swift 3, and later Swift 5. I played a key role in introducing VIPER architecture in the app, which made it much more scalable and integrated OOP concepts in the codebase. Other key features that I implemented are Data formats, sheet listing page, landing view, charts listing, color picker view, etc.</p>
 				</div>
 
 			</div> <!-- /timeline-block -->
@@ -129,7 +129,7 @@
 
 				<div class="timeline-content">
 					<h4>Zoho Corporation</h4>
-					<p>I was intern for Zoho Sheet. During the intern period, I worked mainly in JSP for front-end and Java for back-end.</p>
+					<p style="text-align: justify;">During my internship, I worked predominantly in Zoho Sheet. The technology used for front-end works was JSP and Java for back-end. The key feature that I implemented during my tenure was the optimization of 'merge across' feature in data part.</p>
 				</div>
 
 			</div> <!-- /timeline-block -->
@@ -179,7 +179,7 @@
 
 				<div class="timeline-content">
 					<h4>College of Engineering Trivandrum</h4>
-					<p align="justify">The College of Engineering, Trivandrum, commonly known as CET, is the first engineering college in Kerala, situated in Thiruvananthapuram, the capital city of Kerala. It was founded in 1939 during the reign of the Travancore King, Chithira Thirunal Balarama Varma. CET is the best engineering college in Kerala after NIT Calicut.</p>
+					<p align="justify">The College of Engineering, Trivandrum, commonly known as CET, is a premier college situated in Thiruvananthapuram, Kerala.</p>
 				</div>
 
 			</div> <!-- /timeline-block -->
@@ -197,7 +197,7 @@
 
 				<div class="timeline-content">
 					<h4>Kendriya Vidyalaya (Ernakulam/Pattom)</h4>
-					<p align="justify">The Kendriya Vidyalaya Sangathan (lit. "central schools") is a system of central government schools in India that are instituted under the aegis of the Ministry of Human Resource Development (MHRD). It has a total of 1209 schools in India.(as of July 2019) and three abroad. It is one of world's largest chains of schools.</p>
+					<p align="justify">The Kendriya Vidyalaya Sangathan is a system of central government schools in India that are instituted under the aegis of the Ministry of Human Resource Development (MHRD).</p>
 				</div>
 
 			</div> <!-- /timeline-block -->
