--- a/html/cuber.html
+++ b/html/cuber.html
@@ -2,7 +2,7 @@
 	<div class="col-twelve">
 		<h5>Cuber</h5>
 		<h1>It's my world of puzzles.</h1>
-		<p class="lead">I started my cubing venture by solving a simple 3x3 puzzle in 2012. Later I was introduced to various other twisty puzzles and methodologies through World Cube Association.</p>
+		<p class="lead">I started my cubing venture by solving a simple 3x3 puzzle in 2012. Later I was introduced to various other twisty puzzles and methodologies through World Cube Association. Now I'm a WCA Delegate who has the responsibility of supervision of WCA competitions. I'm also a part of WCA Results Team & WCA Executive Assistant Team.</p>
 		<a class="button stroke smoothscroll" href="https://www.worldcubeassociation.org/persons/2012JAME04" target="_blank" title="">Visit my WCA Profile</a>
 	</div>
 </div>
@@ -131,6 +131,9 @@
 	</div>
 	<div class="col-four">
 		<div class="video-container"><iframe class="cubing-videos" width="560" height="315" src="https://www.youtube.com/embed/2EAFQCITXcM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+	</div>
+	<div class="col-four">
+		<div class="video-container"><iframe class="cubing-videos" width="560" height="315" src="https://www.youtube.com/embed/ui6-lugMh90" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 	</div>
 </div>
 <!-- <div class="row">
