--- a/html/developer.html
+++ b/html/developer.html
@@ -4,7 +4,7 @@
    			<h5>Developer</h5>
    			<h1>All about my Coding.</h1>
 
-   			<p class="lead">I was introduced to the world of Programming in 2011 and later I started learning different theories and frameworks. Data Structures and OOP Concepts are my strongest point.</p>
+   			<p class="lead">Through my passion in Mathematics, I inculcated an interest in Programming. The main area of my interest are Data Structures and OOP Concepts. I also have prowess in working in different frameworks.</p>
 
    		</div></div>
 <div class="row">
@@ -108,6 +108,14 @@
 			<ul class="language">
 				<li class="button stroke smoothscroll disabled">Android Studio</li>
 				<li class="button stroke smoothscroll disabled">XCode (iOS)</li>
+			</ul>
+			<h4 style="color: #000000; text-align: left;">Machine Learning Libraries</h4>
+			<!-- <ul class="skill-bars">
+				<li><div class="progress percent90"></div><strong>MYSQL</strong></li>
+			</ul> -->
+			<ul class="language">
+				<li class="button stroke smoothscroll disabled">NUMPY</li>
+				<li class="button stroke smoothscroll disabled">SCIPY</li>
 			</ul>
 		</div> 
 	</div>
