--- a/html/gamer.html
+++ b/html/gamer.html
@@ -1,8 +1,8 @@
 <div class="row section-intro">
 	<div class="col-twelve">
 		<h5>Gamer</h5>
-		<h1>Technically a 'Gamer', but not a hard core gamer.</h1>
-		<p class="lead">I am not a gamer who spends hours in games exploring, achieving, etc. I just play few games that come to me. But I really want people to join me to play few of my favorite games. They are:</p>
+		<h1>Just another Noobie :-P</h1>
+		<p class="lead">I am not a hardcore gamer who spend hours and hours in games. I just play a few recreational games that I come across. But I would like to connect with a lot of people in these games to make it more fun...</p>
 	</div>
 </div>
 <div class="row">
