--- a/html/traveller.html
+++ b/html/traveller.html
@@ -2,7 +2,7 @@
 	<div class="col-twelve">
 		<h5>Gallivanter</h5>
 		<h1>a.k.a. Traveller.</h1>
-		<p class="lead">I used to travel a lot to different places in the country (mainly for competitions) and sometimes outside the country too. But I'm a bad photographer/videographer/vlogger, because of which I don't have any proofs. Recently, I bought a GoPro and started taking videos of my travel. So I just like to share 'em to you guys.</p>
+		<p class="lead">Exploring new places and cultures was always my dream. Through my WCA Delegate missions, I got to travel across the length & breadth of the country and sometimes even outside the country. Recently, I bought a GoPro and started documenting my travel. These are the little sneak peaks of my voyage...</p>
 	</div>
 </div>
 <div class="row">
