--- a/index.html
+++ b/index.html
@@ -116,12 +116,11 @@
    	<ul class="intro-social">        
          <li><a href="mailto:djdany444@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a></li>
          <li><a href="http://www.linkedin.com/in/danieljames4" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-         <li><a href="https://twitter.com/djdany444" target="_blank"><i class="fa fa-twitter"></i></a></li>
+         <!-- <li><a href="https://twitter.com/djdany444" target="_blank"><i class="fa fa-twitter"></i></a></li> -->
          <li><a href="https://github.com/danieljames-dj" target="_blank"><i class="fa fa-github"></i></a></li>
          <li><a href="https://medium.com/@daniel_james" target="_blank"><i class="fab fa-medium"></i></a></li>
-         <li><a href="https://www.hackerrank.com/danieljames" target="_blank"><i class="fab fa-hackerrank"></i></a></li>
-         <li><a href="https://gitlab.com/djdany444" target="_blank"><i class="fab fa-gitlab"></i></a></li>
-         <li><a href="https://www.kaggle.com/danieljamesdj" target="_blank"><i class="fab fa-kaggle"></i></a></li>
+         <!-- <li><a href="https://www.hackerrank.com/danieljames" target="_blank"><i class="fab fa-hackerrank"></i></a></li> -->
+         <!-- <li><a href="https://www.kaggle.com/danieljamesdj" target="_blank"><i class="fab fa-kaggle"></i></a></li> -->
       </ul> <!-- /intro-social -->      	
 
    </section> <!-- /intro -->
