--- a/html/gamer.html
+++ b/html/gamer.html
@@ -1,7 +1,7 @@
 <div class="row section-intro">
 	<div class="col-twelve">
 		<h5>Gamer</h5>
-		<h1>Just another Noobie :-P</h1>
+		<h1>Just another Noob :-P</h1>
 		<p class="lead">I am not a hardcore gamer who spend hours and hours in games. I just play a few recreational games that I come across. But I would like to connect with a lot of people in these games to make it more fun...</p>
 	</div>
 </div>
