--- a/html/traveller.html
+++ b/html/traveller.html
@@ -1,7 +1,7 @@
 <div class="row section-intro">
 	<div class="col-twelve">
 		<h5>Gallivanter</h5>
-		<h1>a.k.a. Traveller.</h1>
+		<h1>One who loves to travel.</h1>
 		<p class="lead">Exploring new places and cultures was always my dream. Through my WCA Delegate missions, I got to travel across the length & breadth of the country and sometimes even outside the country. Recently, I bought a GoPro and started documenting my travel. These are the little sneak peaks of my voyage...</p>
 	</div>
 </div>
