--- a/index.html
+++ b/index.html
@@ -612,19 +612,19 @@
 		<br/>
 		<div class="col-twelve sub-header"><h2>Videos</h2></div>
 		<div class="row">
-			<div class="col-four">
+			<div class="col-four tab-full">
 				<div class="youtube" data-embed="uJEh5aaF5os">
 					<div class="youtube-title">Rubik's Cube 3x3 Feet - 36 seconds - National Record in 2014 - India [Cubing Diary - Daniel James]</div>
 					<div class="play-button"></div>
 				</div>
 			</div>
-			<div class="col-four">
+			<div class="col-four tab-full">
 				<div class="youtube" data-embed="_r9DJAqZ6_E">
 					<div class="youtube-title">Daniel James is giving a blind show in Rubiks Cube in his college</div>
 					<div class="play-button"></div>
 				</div>
 			</div>
-			<div class="col-four">
+			<div class="col-four tab-full">
 				<div class="youtube" data-embed="a6jB6QsmQuc">
 					<div class="youtube-title">Aju Cube DD4</div>
 					<div class="play-button"></div>
@@ -632,19 +632,19 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-four">
+			<div class="col-four tab-full">
 				<div class="youtube" data-embed="paxDZpcpC1E">
 					<div class="youtube-title">Daniel James in TV New Channel</div>
 					<div class="play-button"></div>
 				</div>
 			</div>
-			<div class="col-four">
+			<div class="col-four tab-full">
 				<div class="youtube" data-embed="2EAFQCITXcM">
 					<div class="youtube-title">ENIGMA | Daniel James | Rubik's cube 3x3 feet national record holder | Neo Film School</div>
 					<div class="play-button"></div>
 				</div>
 			</div>
-			<div class="col-four">
+			<div class="col-four tab-full">
 				<div class="youtube" data-embed="ui6-lugMh90">
 					<div class="youtube-title">Solving a Rubik's Cube Blindfolded ft. Daniel James at Kadence Xperience Store Koramangala</div>
 					<div class="play-button"></div>
@@ -665,7 +665,7 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-four">
+			<div class="col-four tab-full">
 				<div class="youtube" data-embed="8Ldh5xPDUN4">
 					<div class="youtube-title">A car ride from Kochi to Chennai 2019 [Travel Diary - Daniel James]</div>
 					<div class="play-button"></div>
