trainer levels added

--- a/index.html
+++ b/index.html
@@ -692,9 +692,10 @@
 						</div>
 						<div class="row" style="margin: 10px;">
 							<h2>Typeracer</h2>
+							<h4>(Around 75 WPM)</h4>
 						</div>
 						<div class="row" style="margin: 10px;">
-							<p><a href="https://data.typeracer.com/pit/profile?user=djdany444" target="_blank">Click here</a> to view my profile. Race with me when you're free...</p>
+							<p><a href="https://data.typeracer.com/pit/profile?user=djdany444" target="_blank">Click here</a> to view my profile. Race with me when you're free!</p>
 						</div>
 					</div>
 				</div>
@@ -705,6 +706,7 @@
 						</div>
 						<div class="row" style="margin: 10px;">
 							<h2>Pokemon GO</h2>
+							<h4>(Trainer level: 33)</h4>
 						</div>
 						<div class="row" style="margin: 10px;">
 							<p>Let's be friends in Pokémon GO! My Trainer Code is 0443 8105 5929!</p>
@@ -718,9 +720,10 @@
 						</div>
 						<div class="row" style="margin: 10px;">
 							<h2>Clash of Clans</h2>
+							<h4>(TH: 12, BH: 8, XP: 174)</h4>
 						</div>
 						<div class="row" style="margin: 10px;">
-							<p>Here's my Player Code! Be friend with me and let's share COC tips & tricks...</p>
+							<p>Here's my Player Code - #28CVYJPC2! Be friend with me and let's share COC tips & tricks!</p>
 						</div>
 					</div></a>
 				</div>
