--- a/index.html
+++ b/index.html
@@ -475,17 +475,30 @@
 				</div> 
 			</div>
 			<div class="col-twelve">
-				<div class="col-twelve sub-header"><h2>Blogs (more coming soon...)</h2></div>
+				<div class="col-twelve sub-header"><h2>Blogs</h2></div>
 				<div class="col-four tab-full"><a href="https://medium.com/@daniel_james/git-anonymize-user-name-and-user-email-in-the-commits-log-a6a21a9d4c09" target="_blank" style="color: inherit;">
 					<div class="blogpost" style="text-align: center;">
 						<div class="row" style="margin: 10px;">
 							<i class="fab fa-medium" style="width: 100%; max-width: 100px; font-size: 100px;"></i>
 						</div>
 						<div class="row" style="margin: 10px;">
-							<h2>Git anonymize user name and user email in the commits log</h2>
+							<h2 class="blog-title">Git anonymize user name and user email in the commits log</h2>
 						</div>
 						<div class="row" style="margin: 10px;">
-							<p>In git version control, you can set the user name and user email that should be displayed....</p>
+							<p class="blog-content">In git version control, you can set the user name and user email that should be displayed....</p>
+						</div>
+					</div></a>
+				</div>
+				<div class="col-four tab-full"><a href="https://medium.com/@daniel_james/common-character-encodings-dfa74e28725d" target="_blank" style="color: inherit;">
+					<div class="blogpost" style="text-align: center;">
+						<div class="row" style="margin: 10px;">
+							<i class="fab fa-medium" style="width: 100%; max-width: 100px; font-size: 100px;"></i>
+						</div>
+						<div class="row" style="margin: 10px;">
+							<h2 class="blog-title">Common character encodings</h2>
+						</div>
+						<div class="row" style="margin: 10px; height: 30px;">
+							<p class="blog-content">In a file or a program, the characters supported will be depending on the character encoding....</p>
 						</div>
 					</div></a>
 				</div>
@@ -692,7 +705,7 @@
 		<div class="row">
 			<div class="col-twelve">
 				<div class="col-four tab-full">
-					<div class="blogpost" style="text-align: center;">
+					<div class="gamepost" style="text-align: center;">
 						<div class="row" style="margin: 10px; padding-top: 10px;">
 							<img src="images/games/typeracer.png"></img>
 						</div>
@@ -706,7 +719,7 @@
 					</div>
 				</div>
 				<div class="col-four tab-full"><a href="https://medium.com/@daniel_james/git-anonymize-user-name-and-user-email-in-the-commits-log-a6a21a9d4c09" target="_blank" style="color: inherit;">
-					<div class="blogpost" style="text-align: center;">
+					<div class="gamepost" style="text-align: center;">
 						<div class="row" style="margin: 10px; padding-top: 10px;">
 							<img src="images/games/pogo.png"></img>
 						</div>
@@ -720,7 +733,7 @@
 					</div></a>
 				</div>
 				<div class="col-four tab-full"><a href="https://medium.com/@daniel_james/git-anonymize-user-name-and-user-email-in-the-commits-log-a6a21a9d4c09" target="_blank" style="color: inherit;">
-					<div class="blogpost" style="text-align: center;">
+					<div class="gamepost" style="text-align: center;">
 						<div class="row" style="margin: 10px; padding-top: 10px;">
 							<img src="images/games/coc.png"></img>
 						</div>
